<resources>
    <string name="app_name">Flashcard Widget</string>
    <string name="setting">Settings</string>
    <string name="setting_text">The bellow references with apply for the widget</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="tell_my_friend">Tell My Friends</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="enable_speaker">Enable Speaker</string>
    <string name="pronounce_word">The app will help to pronounce the word</string>
    <string name="notification">Notification</string>
    <string name="notification_text">The app will notify you when we got a new word</string>

    <!-- AdMob banner ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-6099219057812642/2195104814</string>
</resources>
