<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.me.englisheveryday.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_text"
        android:textSize="@dimen/setting_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/intervalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/refresh_interval"
            android:textSize="@dimen/interval_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="1 hour"
            android:textSize="@dimen/setting_text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/speakerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/speakerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/interval_text"
            android:text="@string/enable_speaker" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speakerText"
            android:textSize="@dimen/setting_text_size"
            android:layout_marginTop="5dp"
            android:text="@string/pronounce_word" />

        <CheckBox
            android:id="@+id/cbSpeaker"
            android:layout_width="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/notificationLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/notifyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/interval_text"
            android:text="@string/notification" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notifyText"
            android:textSize="@dimen/setting_text_size"
            android:layout_marginTop="5dp"
            android:text="@string/notification_text" />

        <CheckBox
            android:id="@+id/cbNotification"
            android:layout_width="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>
